[tool.poetry]
name = "hdb-neo4j-import"
version = "1.0.0"
description = "Matthieu Lienart, UMSI MADS program Captsone project"
authors = ["Matthieu <matthieu.lienart@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
jupyter = "1.0.0"
conda-lock = "1.4.0"
numpy = "^1.24.2"
pandas = "^1.5.3"
dbfread = "^2.0.7"
dms2dec = "^0.1"
xlrd = "^2.0.1"
beautifulsoup4 = "^4.12.0"
lxml = "^4.9.2"
selenium = "^4.8.3"
requests = "^2.28.2"
tqdm = "^4.65.0"
pytest = "^7.2.2"
neo4j = "^5.7.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
